[#17] Update Swagger OpenAPI, ADD Champion List  API, ADD Profile Find API
