# src/main/java/opgg/backend/gmakersserver/domain/profile/controller/ProfileController.java
@@ -1,24 +1,17 @@
 package opgg.backend.gmakersserver.domain.profile.controller;
 
-import static org.springframework.http.HttpStatus.*;
-
-import java.util.List;
-
-import javax.validation.Valid;
-
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PatchMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.bind.annotation.RestController;
-
 import lombok.RequiredArgsConstructor;
 import opgg.backend.gmakersserver.domain.profile.controller.request.ProfileRequest;
+import opgg.backend.gmakersserver.domain.profile.controller.response.ProfileFindResponse;
 import opgg.backend.gmakersserver.domain.profile.controller.response.ProfileResponse;
 import opgg.backend.gmakersserver.domain.profile.service.ProfileService;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.web.bind.annotation.*;
+
+import javax.validation.Valid;
+import java.util.List;
+
+import static org.springframework.http.HttpStatus.CREATED;
 
 @RestController
 @RequestMapping("/api")
@@ -46,7 +39,7 @@ public class ProfileController {
 	}
 
 	@GetMapping("/profiles")
-	public List<ProfileResponse.Find> getProfiles(@AuthenticationPrincipal Long id) {
+	public List<ProfileFindResponse> getProfiles(@AuthenticationPrincipal Long id) {
 		return profileService.getProfiles(id);
 	}
 
