# src/main/java/opgg/backend/gmakersserver/domain/profile/repository/ProfileRepositoryCustom.java
@@ -1,8 +1,10 @@
 package opgg.backend.gmakersserver.domain.profile.repository;
 
 import opgg.backend.gmakersserver.domain.account.entity.Account;
+import opgg.backend.gmakersserver.domain.profile.controller.response.ProfileFindResponse;
 import opgg.backend.gmakersserver.domain.profile.entity.Profile;
 
+import java.util.List;
 import java.util.Optional;
 
 public interface ProfileRepositoryCustom {
@@ -12,4 +14,6 @@ public interface ProfileRepositoryCustom {
     Optional<Profile> findBySummonerIdAndAccountId(String summonerId, Long accountId);
 
     long countByAccount(Account account);
+
+    List<ProfileFindResponse> findProfileMainByAccount(Account account);
 }
